<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4sp"
                android:paddingTop="4sp"
                android:paddingRight="4sp"
                android:paddingBottom="4sp"
                android:text="@string/review_caption_detail"
                app:layout_constraintBottom_toTopOf="@+id/reviews_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videos_detail" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4sp"
                android:paddingTop="4sp"
                android:paddingRight="4sp"
                android:paddingBottom="4sp"
                android:text="@string/video_caption_detail"
                app:layout_constraintBottom_toTopOf="@+id/videos_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_detail"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/videos_detail"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videos_detail" />

            <TextView
                android:id="@+id/release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/thumbnail_detail"
                app:layout_constraintTop_toBottomOf="@+id/original_title_detail"
                tools:text="@string/release_date_detail" />

            <Button
                android:id="@+id/mark_as_favorite_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/mark_as_favorite_detail_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/thumbnail_detail"
                app:layout_constraintTop_toBottomOf="@+id/vote_average_detail" />

            <TextView
                android:id="@+id/vote_average_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/thumbnail_detail"
                app:layout_constraintTop_toBottomOf="@+id/release_date_detail"
                tools:text="@string/vote_average_detail" />

            <TextView
                android:id="@+id/overview_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mark_as_favorite_detail"
                tools:text="@string/overview_detail" />

            <ImageView
                android:id="@+id/thumbnail_detail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/thumbnail_detail_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/original_title_detail"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/original_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingLeft="32dp"
                android:paddingTop="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="32dp"
                android:textColor="#FFFFFFFF"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/original_title_detail" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>